Support for load-balancing with cache activated. When preserveHost is activated, the response should be stored in cache under this hostname and not the hostname of the node used for the request. https://sourceforge.net/apps/mantisbt/webassembletool/view.php?id=47